--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,14 +1,32 @@
-location / {
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
-}
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
 
-location @rewriteapp {
-    # rewrite all to index.php
-    rewrite ^(.*)$ /index.php/$1 last;
-}
+    listen 443 ssl;
 
-location ~ ^/(app|app_dev|config|index)\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
+    root /var/www/lumen/public;
+    index index.php index.html index.htm;
+
+    server_name localhost;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+    #location / {
+    #    try_files $uri $uri/ /index.php?$query_string;
+    #}
+
+    location / {
+        # try to serve file directly, fallback to rewrite
+        try_files $uri @rewriteapp;
+    }
+
+    location @rewriteapp {
+        # rewrite all to index.php
+        rewrite ^(.*)$ /index.php/$1 last;
+    }
+
+    location ~ ^/(app|app_dev|config|index)\.php(/|$) {
+        try_files @heroku-fcgi @heroku-fcgi;
+        internal;
+    }
 }
