--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,6 +2,8 @@
 #    try_files $uri $uri/ /index.php?$query_string;
 #}
 
+root /app/public
+
 location / {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
