Uses local nginx config - 5

--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,7 +2,7 @@
 #    try_files $uri $uri/ /index.php?$query_string;
 #}
 
-root /app/public
+root /app/public;
 
 location / {
     # try to serve file directly, fallback to rewrite
