--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,5 +1,5 @@
 location / {
-    root /app/public
+    root /app/public;
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
